api-manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: api-ingress
  namespace: ingress-nginx
spec:
  tls:
    - hosts:
        - "api.cluster.local"
      secretName: api-tls
  rules:
    - host: "api.cluster.local"
      http:
        paths:
          - path: /(api\/.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
